
build loop
======================

XcodeBuilder
----------------------
* Add a new plugin for building projects in Apple's Xcode IDE.

reporting jsp app
======================

cruisecontrol.css
----------------------
* Fix width of the selection controls in the menu
* Fix problem in IE where content was shifted off screen to the right (CC-869). Patch by Florian Rosenauer

CruiseControl Release Notes - 2.8

general
======================
* End of support for compiling/running CruiseControl with JDK 1.4. New earliest supported JDK is 1.5/5.0.
* Update JSP reporting application to Servlet API 2.5 and JSP API 2.1
* Update Jetty to 6.1.11
* Extracted out the utility class ServerNameSingleton to avoid mulitple slow calls to get the host name.
* Add -log4jconfig command line property to specify URL (for example: "file:/c:/mylog4j.xml") to log4j configuration file.
* Update log4j to v1.2.15.
* Marked SelfConfiguringPlugin api as deprecated. We hope to remove the SelfConfiguringPlugin api soon (as it leads to more problems than it solves). If you really need the this api, please discuss why you need it on the user or dev lists (and hopefully we can find a way to use the standard plugin configuration instead.)

contrib
======================
* Move plugins that require external libraries to build out of cruisecontrol/main. They are now under cruisecontrol/contrib/plugins. Affected plugins include:
  - AllFusionHarvest
  - Sametime
  - StarTeam
  - Yahoo

distributed
----------------------
* Add distributed documentation to website
* Remove deprecated BuildAgentService.doBuild() methods.
* Added Lookup Services control feature to the Agent Utility. Allows you to stop a LookupService and it's ClassServer.
NOTE: We can always stop a LookupService, but the Swing Agent Utility can only stop the ClassServer on the localhost and the JMX Agent Utility can only stop the ClassServer on the host running the JMX server.

documentation
======================